# vidistill

./: .gitignore  README.md  pyproject.toml
src/vidistill/: config.py  downloader.py  extractor.py  models.py  queue.py
